--- a/SS.Marcelo.DevTest.Domain/SS.Marcelo.DevTest.Domain.csproj
+++ b/SS.Marcelo.DevTest.Domain/SS.Marcelo.DevTest.Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidator" Version="2.0.4" />
     <PackageReference Include="MediatR" Version="7.0.0" />
   </ItemGroup>
 
